fix spacing

--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -166,6 +166,7 @@ article .markdown p code {
   letter-spacing: 1px;
   margin-top: 24px;
   top: 0 !important;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .thin-scrollbar ul li a {
@@ -190,6 +191,7 @@ article time {
 
 .navbar__link {
   color: white;
+  font-size: 1.2rem !important;
 }
 
 .navbar__link:hover {
@@ -311,7 +313,6 @@ html.docs-doc-id\/index .navbar-sidebar
   .clean-btn.navbar-sidebar__back::before {
   display: inline-block;
   content: url('/img/arrow-yellow.svg');
-
   position: relative;
 }
 
